Improved asset handling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@ body {
 }
 
 .image-bg {
-    background-image: url('../images/react-logo.svg');
+    background-image: url('../assets/images/react-logo.svg');
     background-repeat: no-repeat;
     width: 200px;
     height: 200px;
